--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="address_comments">Comments</string>
     <string name="street">Street</string>
     <string name="dummy_street">Dummy Street</string>
+    <string name="basket">Basket</string>
 
 </resources>
